[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/scenes/misc/GrineerShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/scenes/tileset/EarthTile.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/misc/Liset.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/earth/grineer_ambience_1.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/textures/tileset/parallax_background/earth/plx-5.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/tileset/parallax_background/earth/plx-2.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/tileset/parallax_background/earth/plx-1.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/tileset/parallax_background/earth/plx-3.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/tileset/parallax_background/earth/plx-4.png" type="Texture" id=9]
[ext_resource path="res://assets/scripts/levels/earth/StageOne.gd" type="Script" id=10]
[ext_resource path="res://assets/scenes/npc/GrineerLancer.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 188, 40 )

[node name="StageOne" type="Node"]
script = ExtResource( 10 )

[node name="GrineerShip" parent="." instance=ExtResource( 1 )]
position = Vector2( 4888, 96 )

[node name="Liset" parent="." instance=ExtResource( 3 )]
position = Vector2( 32, -67 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
cell_quadrant_size = 32
tile_data = PoolIntArray( -524259, 5, 0, -524258, 8, 0, -524257, 8, 0, -524256, 8, 0, -524255, 8, 0, -524254, 8, 0, -524253, 8, 0, -524252, 8, 0, -524251, 8, 0, -524250, 8, 0, -524249, 3, 0, -458723, 5, 0, -458722, 8, 0, -458721, 8, 0, -458720, 8, 0, -458719, 8, 0, -458718, 8, 0, -458717, 8, 0, -458716, 8, 0, -458715, 8, 0, -458714, 8, 0, -458713, 3, 0, -393187, 5, 0, -393186, 8, 0, -393185, 8, 0, -393184, 8, 0, -393183, 8, 0, -393182, 8, 0, -393181, 8, 0, -393180, 8, 0, -393179, 8, 0, -393178, 8, 0, -393177, 3, 0, -327651, 5, 0, -327650, 8, 0, -327649, 8, 0, -327648, 8, 0, -327647, 8, 0, -327646, 8, 0, -327645, 8, 0, -327644, 8, 0, -327643, 8, 0, -327642, 8, 0, -327641, 3, 0, -327523, 5, 0, -262115, 5, 0, -262114, 8, 0, -262113, 8, 0, -262112, 8, 0, -262111, 8, 0, -262110, 50, 0, -262109, 7, 0, -262108, 7, 0, -262107, 7, 0, -262106, 7, 0, -262105, 57, 0, -261987, 5, 0, -196579, 5, 0, -196578, 8, 0, -196577, 8, 0, -196576, 50, 0, -196575, 7, 0, -196574, 57, 0, -196573, 62, 0, -196572, 62, 1, -196571, 62, 1, -196570, 62, 1, -196569, 62, 2, -196451, 5, 0, -131043, 5, 0, -131042, 8, 0, -131041, 8, 0, -131040, 3, 0, -131039, 62, 0, -131038, 62, 1, -131037, 62, 65541, -131036, 62, 65537, -131035, 62, 65537, -131034, 62, 65537, -131033, 62, 65538, -130971, 33, 0, -130970, 34, 0, -130915, 5, 0, -65507, 5, 0, -65506, 8, 0, -65505, 8, 0, -65504, 3, 0, -65503, 62, 65536, -65502, 62, 65537, -65501, 62, 65537, -65500, 62, 65537, -65499, 62, 65537, -65498, 62, 65537, -65497, 62, 65538, -65435, 35, 0, -65434, 36, 0, -65379, 5, 0, 65535, 3, 0, 29, 5, 0, 30, 8, 0, 31, 8, 0, 32, 3, 0, 33, 62, 131072, 34, 62, 131073, 35, 62, 131073, 36, 62, 131073, 37, 62, 131073, 38, 62, 131073, 39, 62, 131074, 46, 33, 0, 47, 34, 0, 81, 33, 0, 82, 34, 0, 101, 37, 0, 102, 38, 0, 157, 5, 0, 131071, 3, 0, 65565, 5, 0, 65566, 8, 0, 65567, 8, 0, 65568, 53, 0, 65569, 1, 0, 65570, 1, 0, 65571, 1, 0, 65572, 1, 0, 65573, 1, 0, 65574, 1, 0, 65575, 43, 0, 65582, 35, 0, 65583, 36, 0, 65617, 35, 0, 65618, 36, 0, 65636, 31, 0, 65637, 39, 0, 65638, 40, 0, 65693, 5, 0, 196607, 3, 0, 131101, 56, 0, 131102, 46, 0, 131103, 51, 0, 131104, 8, 0, 131105, 8, 0, 131106, 8, 0, 131107, 8, 0, 131108, 8, 0, 131109, 8, 0, 131110, 8, 0, 131111, 3, 0, 131118, 37, 0, 131119, 38, 0, 131153, 37, 0, 131154, 38, 0, 131169, 41, 0, 131170, 1, 0, 131171, 1, 0, 131172, 1, 0, 131173, 1, 0, 131174, 1, 0, 131175, 2, 0, 131229, 5, 0, 262143, 3, 0, 196639, 5, 0, 196640, 8, 0, 196641, 8, 0, 196642, 8, 0, 196643, 8, 0, 196644, 8, 0, 196645, 8, 0, 196646, 8, 0, 196647, 3, 0, 196653, 29, 0, 196654, 39, 0, 196655, 40, 0, 196656, 32, 0, 196688, 32, 0, 196689, 39, 0, 196690, 40, 0, 196691, 31, 0, 196702, 9, 0, 196705, 5, 0, 196706, 8, 0, 196707, 8, 0, 196708, 8, 0, 196709, 8, 0, 196710, 8, 0, 196711, 3, 0, 196754, 32, 0, 196756, 31, 0, 196757, 31, 0, 196765, 5, 0, 327679, 3, 0, 262152, 33, 0, 262153, 34, 0, 262175, 5, 0, 262176, 8, 0, 262177, 8, 0, 262178, 8, 0, 262179, 8, 0, 262180, 8, 0, 262181, 8, 0, 262182, 8, 0, 262183, 3, 0, 262188, 0, 0, 262189, 1, 0, 262190, 1, 0, 262191, 1, 0, 262192, 1, 0, 262193, 2, 0, 262195, 33, 0, 262196, 34, 0, 262224, 0, 0, 262225, 1, 0, 262226, 1, 0, 262227, 1, 0, 262228, 1, 0, 262229, 2, 0, 262241, 5, 0, 262242, 8, 0, 262243, 8, 0, 262244, 8, 0, 262245, 8, 0, 262246, 8, 0, 262247, 3, 0, 262249, 30, 0, 262250, 31, 0, 262252, 33, 0, 262253, 34, 0, 262290, 0, 0, 262291, 1, 0, 262292, 1, 0, 262293, 1, 0, 262294, 1, 0, 262295, 1, 0, 262296, 1, 0, 262297, 1, 0, 262298, 1, 0, 262299, 1, 0, 262300, 1, 0, 393215, 3, 0, 327688, 35, 0, 327689, 36, 0, 327711, 5, 0, 327712, 8, 0, 327713, 8, 0, 327714, 8, 0, 327715, 8, 0, 327716, 8, 0, 327717, 8, 0, 327718, 8, 0, 327719, 3, 0, 327724, 56, 0, 327725, 51, 0, 327726, 8, 0, 327727, 8, 0, 327728, 8, 0, 327729, 3, 0, 327731, 35, 0, 327732, 36, 0, 327758, 29, 0, 327760, 5, 0, 327761, 8, 0, 327762, 8, 0, 327763, 8, 0, 327764, 8, 0, 327765, 3, 0, 327777, 5, 0, 327778, 8, 0, 327779, 8, 0, 327780, 8, 0, 327781, 8, 0, 327782, 8, 0, 327783, 53, 0, 327784, 1, 0, 327785, 1, 0, 327786, 2, 0, 327788, 35, 0, 327789, 36, 0, 327821, 30, 0, 327826, 5, 0, 327827, 8, 0, 327828, 8, 0, 327829, 8, 0, 327830, 8, 0, 327831, 8, 0, 327832, 8, 0, 327833, 8, 0, 327834, 8, 0, 327835, 8, 0, 327836, 8, 0, 458751, 3, 0, 393216, 30, 0, 393224, 37, 0, 393225, 38, 0, 393231, 0, 0, 393232, 1, 0, 393233, 2, 0, 393247, 56, 0, 393248, 46, 0, 393249, 51, 0, 393250, 8, 0, 393251, 8, 0, 393252, 8, 0, 393253, 8, 0, 393254, 8, 0, 393255, 3, 0, 393261, 5, 0, 393262, 8, 0, 393263, 8, 0, 393264, 8, 0, 393265, 3, 0, 393267, 37, 0, 393268, 38, 0, 393292, 0, 0, 393293, 1, 0, 393294, 1, 0, 393295, 1, 0, 393296, 52, 0, 393297, 8, 0, 393298, 8, 0, 393299, 8, 0, 393300, 50, 0, 393301, 57, 0, 393307, 29, 0, 393313, 5, 0, 393314, 8, 0, 393315, 8, 0, 393316, 8, 0, 393317, 8, 0, 393318, 8, 0, 393319, 8, 0, 393320, 8, 0, 393321, 8, 0, 393322, 3, 0, 393324, 37, 0, 393325, 38, 0, 393357, 9, 0, 393359, 33, 0, 393360, 34, 0, 393362, 5, 0, 393363, 8, 0, 393364, 8, 0, 393365, 8, 0, 393366, 8, 0, 393367, 8, 0, 393368, 8, 0, 393369, 8, 0, 393370, 8, 0, 393371, 8, 0, 393372, 8, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 43, 0, 458759, 29, 0, 458760, 39, 0, 458761, 40, 0, 458764, 32, 0, 458767, 5, 0, 458768, 8, 0, 458769, 3, 0, 458785, 5, 0, 458786, 8, 0, 458787, 8, 0, 458788, 8, 0, 458789, 8, 0, 458790, 53, 0, 458791, 42, 0, 458792, 12, 0, 458797, 5, 0, 458798, 8, 0, 458799, 8, 0, 458800, 8, 0, 458801, 3, 0, 458802, 30, 0, 458803, 39, 0, 458804, 40, 0, 458828, 5, 0, 458829, 8, 0, 458830, 8, 0, 458831, 8, 0, 458832, 8, 0, 458833, 8, 0, 458834, 8, 0, 458835, 8, 0, 458836, 3, 0, 458841, 10, 0, 458842, 11, 0, 458843, 12, 0, 458849, 5, 0, 458850, 8, 0, 458851, 8, 0, 458852, 8, 0, 458853, 8, 0, 458854, 8, 0, 458855, 8, 0, 458856, 8, 0, 458857, 8, 0, 458858, 3, 0, 458860, 39, 0, 458861, 40, 0, 458862, 29, 0, 458895, 35, 0, 458896, 36, 0, 458898, 5, 0, 458899, 8, 0, 458900, 8, 0, 458901, 8, 0, 458902, 8, 0, 458903, 8, 0, 458904, 8, 0, 458905, 8, 0, 458906, 8, 0, 458907, 8, 0, 458908, 8, 0, 524288, 8, 0, 524289, 8, 0, 524290, 8, 0, 524291, 8, 0, 524292, 53, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 52, 0, 524304, 8, 0, 524305, 3, 0, 524307, 30, 0, 524321, 5, 0, 524322, 8, 0, 524323, 8, 0, 524324, 8, 0, 524325, 8, 0, 524326, 8, 0, 524327, 3, 0, 524333, 5, 0, 524334, 8, 0, 524335, 8, 0, 524336, 8, 0, 524337, 53, 0, 524338, 1, 0, 524339, 1, 0, 524340, 1, 0, 524341, 2, 0, 524361, 30, 0, 524363, 32, 0, 524364, 5, 0, 524365, 8, 0, 524366, 8, 0, 524367, 8, 0, 524368, 8, 0, 524369, 8, 0, 524370, 8, 0, 524371, 8, 0, 524372, 3, 0, 524385, 5, 0, 524386, 8, 0, 524387, 8, 0, 524388, 8, 0, 524389, 8, 0, 524390, 8, 0, 524391, 8, 0, 524392, 8, 0, 524393, 53, 0, 524394, 1, 0, 524395, 1, 0, 524396, 1, 0, 524397, 1, 0, 524398, 1, 0, 524399, 2, 0, 524431, 37, 0, 524432, 38, 0, 524434, 5, 0, 524435, 8, 0, 524436, 8, 0, 524437, 8, 0, 524438, 8, 0, 524439, 8, 0, 524440, 8, 0, 524441, 8, 0, 524442, 8, 0, 524443, 8, 0, 524444, 8, 0, 589824, 8, 0, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 8, 0, 589834, 8, 0, 589835, 8, 0, 589836, 8, 0, 589837, 8, 0, 589838, 8, 0, 589839, 8, 0, 589840, 8, 0, 589841, 53, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 2, 0, 589857, 5, 0, 589858, 8, 0, 589859, 8, 0, 589860, 8, 0, 589861, 8, 0, 589862, 8, 0, 589863, 3, 0, 589869, 5, 0, 589870, 8, 0, 589871, 8, 0, 589872, 8, 0, 589873, 8, 0, 589874, 8, 0, 589875, 8, 0, 589876, 8, 0, 589877, 3, 0, 589897, 0, 0, 589898, 1, 0, 589899, 1, 0, 589900, 52, 0, 589901, 8, 0, 589902, 8, 0, 589903, 8, 0, 589904, 8, 0, 589905, 8, 0, 589906, 8, 0, 589907, 8, 0, 589908, 3, 0, 589921, 5, 0, 589922, 8, 0, 589923, 8, 0, 589924, 8, 0, 589925, 8, 0, 589926, 8, 0, 589927, 8, 0, 589928, 8, 0, 589929, 8, 0, 589930, 8, 0, 589931, 8, 0, 589932, 8, 0, 589933, 8, 0, 589934, 8, 0, 589935, 3, 0, 589967, 39, 0, 589968, 40, 0, 589969, 54, 0, 589970, 52, 0, 589971, 8, 0, 589972, 8, 0, 589973, 8, 0, 589974, 8, 0, 589975, 8, 0, 589976, 8, 0, 589977, 8, 0, 589978, 8, 0, 589979, 8, 0, 589980, 8, 0, 655360, 8, 0, 655361, 8, 0, 655362, 8, 0, 655363, 8, 0, 655364, 8, 0, 655365, 8, 0, 655366, 8, 0, 655367, 8, 0, 655368, 8, 0, 655369, 8, 0, 655370, 8, 0, 655371, 8, 0, 655372, 8, 0, 655373, 8, 0, 655374, 8, 0, 655375, 8, 0, 655376, 8, 0, 655377, 8, 0, 655378, 8, 0, 655379, 8, 0, 655380, 8, 0, 655381, 8, 0, 655382, 8, 0, 655383, 3, 0, 655393, 56, 0, 655394, 7, 0, 655395, 7, 0, 655396, 7, 0, 655397, 7, 0, 655398, 7, 0, 655399, 57, 0, 655404, 29, 0, 655405, 5, 0, 655406, 8, 0, 655407, 8, 0, 655408, 8, 0, 655409, 8, 0, 655410, 8, 0, 655411, 8, 0, 655412, 8, 0, 655413, 3, 0, 655425, 10, 0, 655426, 1, 0, 655427, 12, 0, 655433, 5, 0, 655434, 8, 0, 655435, 8, 0, 655436, 8, 0, 655437, 8, 0, 655438, 8, 0, 655439, 8, 0, 655440, 8, 0, 655441, 8, 0, 655442, 8, 0, 655443, 8, 0, 655444, 3, 0, 655445, 31, 0, 655455, 33, 0, 655456, 34, 0, 655457, 5, 0, 655458, 8, 0, 655459, 8, 0, 655460, 8, 0, 655461, 8, 0, 655462, 8, 0, 655463, 8, 0, 655464, 8, 0, 655465, 8, 0, 655466, 8, 0, 655467, 8, 0, 655468, 8, 0, 655469, 8, 0, 655470, 8, 0, 655471, 53, 0, 655472, 43, 0, 655502, 0, 0, 655503, 1, 0, 655504, 1, 0, 655505, 1, 0, 655506, 52, 0, 655507, 8, 0, 655508, 8, 0, 655509, 8, 0, 655510, 8, 0, 655511, 8, 0, 655512, 8, 0, 655513, 8, 0, 655514, 8, 0, 655515, 8, 0, 655516, 8, 0, 720896, 8, 0, 720897, 8, 0, 720898, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 8, 0, 720903, 8, 0, 720904, 8, 0, 720905, 8, 0, 720906, 8, 0, 720907, 8, 0, 720908, 8, 0, 720909, 8, 0, 720910, 8, 0, 720911, 8, 0, 720912, 8, 0, 720913, 8, 0, 720914, 8, 0, 720915, 8, 0, 720916, 8, 0, 720917, 8, 0, 720918, 8, 0, 720919, 3, 0, 720940, 10, 0, 720941, 42, 0, 720942, 52, 0, 720943, 8, 0, 720944, 8, 0, 720945, 8, 0, 720946, 8, 0, 720947, 8, 0, 720948, 8, 0, 720949, 53, 0, 720950, 2, 0, 720954, 0, 0, 720955, 1, 0, 720956, 2, 0, 720962, 27, 0, 720969, 5, 0, 720970, 8, 0, 720971, 8, 0, 720972, 8, 0, 720973, 8, 0, 720974, 8, 0, 720975, 8, 0, 720976, 8, 0, 720977, 8, 0, 720978, 8, 0, 720979, 53, 0, 720980, 1, 0, 720981, 1, 0, 720982, 2, 0, 720984, 33, 0, 720985, 34, 0, 720991, 35, 0, 720992, 36, 0, 720993, 5, 0, 720994, 8, 0, 720995, 8, 0, 720996, 8, 0, 720997, 8, 0, 720998, 8, 0, 720999, 8, 0, 721000, 8, 0, 721001, 8, 0, 721002, 8, 0, 721003, 8, 0, 721004, 8, 0, 721005, 8, 0, 721006, 8, 0, 721007, 50, 0, 721008, 57, 0, 721027, 29, 0, 721033, 26, 0, 721038, 5, 0, 721039, 8, 0, 721040, 8, 0, 721041, 8, 0, 721042, 8, 0, 721043, 8, 0, 721044, 8, 0, 721045, 8, 0, 721046, 8, 0, 721047, 8, 0, 721048, 8, 0, 721049, 8, 0, 721050, 8, 0, 721051, 8, 0, 721052, 8, 0, 786432, 8, 0, 786433, 8, 0, 786434, 8, 0, 786435, 8, 0, 786436, 8, 0, 786437, 8, 0, 786438, 8, 0, 786439, 8, 0, 786440, 8, 0, 786441, 8, 0, 786442, 8, 0, 786443, 8, 0, 786444, 8, 0, 786445, 8, 0, 786446, 8, 0, 786447, 8, 0, 786448, 8, 0, 786449, 8, 0, 786450, 8, 0, 786451, 8, 0, 786452, 8, 0, 786453, 8, 0, 786454, 8, 0, 786455, 3, 0, 786473, 30, 0, 786474, 32, 0, 786476, 54, 0, 786477, 60, 0, 786478, 51, 0, 786479, 8, 0, 786480, 8, 0, 786481, 8, 0, 786482, 8, 0, 786483, 8, 0, 786484, 8, 0, 786485, 8, 0, 786486, 3, 0, 786490, 5, 0, 786491, 8, 0, 786492, 3, 0, 786498, 27, 0, 786505, 5, 0, 786506, 8, 0, 786507, 8, 0, 786508, 8, 0, 786509, 8, 0, 786510, 50, 0, 786511, 51, 0, 786512, 8, 0, 786513, 8, 0, 786514, 8, 0, 786515, 8, 0, 786516, 8, 0, 786517, 50, 0, 786518, 57, 0, 786520, 35, 0, 786521, 36, 0, 786527, 37, 0, 786528, 38, 0, 786529, 5, 0, 786530, 8, 0, 786531, 8, 0, 786532, 8, 0, 786533, 8, 0, 786534, 8, 0, 786535, 8, 0, 786536, 8, 0, 786537, 8, 0, 786538, 8, 0, 786539, 8, 0, 786540, 8, 0, 786541, 8, 0, 786542, 8, 0, 786543, 3, 0, 786563, 26, 0, 786569, 27, 0, 786574, 5, 0, 786575, 8, 0, 786576, 8, 0, 786577, 8, 0, 786578, 8, 0, 786579, 8, 0, 786580, 8, 0, 786581, 8, 0, 786582, 8, 0, 786583, 8, 0, 786584, 8, 0, 786585, 8, 0, 786586, 8, 0, 786587, 8, 0, 786588, 8, 0, 851968, 16, 0, 851969, 16, 0, 851970, 16, 0, 851971, 16, 0, 851972, 16, 0, 851973, 16, 0, 851974, 16, 0, 851975, 16, 0, 851976, 16, 0, 851977, 16, 0, 851978, 16, 0, 851979, 16, 0, 851980, 16, 0, 851981, 16, 0, 851982, 16, 0, 851983, 16, 0, 851984, 16, 0, 851985, 16, 0, 851986, 16, 0, 851987, 16, 0, 851988, 16, 0, 851989, 16, 0, 851990, 16, 0, 851991, 24, 0, 851992, 0, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851997, 1, 0, 851998, 1, 0, 851999, 1, 0, 852000, 1, 0, 852001, 1, 0, 852002, 1, 0, 852003, 1, 0, 852004, 1, 0, 852005, 1, 0, 852006, 1, 0, 852007, 1, 0, 852008, 1, 0, 852009, 1, 0, 852010, 1, 0, 852011, 1, 0, 852012, 1, 0, 852013, 1, 0, 852014, 52, 0, 852015, 8, 0, 852016, 8, 0, 852017, 8, 0, 852018, 8, 0, 852019, 8, 0, 852020, 8, 0, 852021, 8, 0, 852022, 3, 0, 852023, 22, 0, 852024, 22, 0, 852025, 22, 0, 852026, 25, 0, 852027, 16, 0, 852028, 24, 0, 852029, 22, 0, 852030, 22, 0, 852031, 22, 0, 852032, 22, 0, 852033, 22, 0, 852034, 18, 0, 852035, 22, 0, 852036, 22, 0, 852037, 22, 0, 852038, 22, 0, 852039, 22, 0, 852040, 22, 0, 852041, 21, 0, 852042, 16, 0, 852043, 16, 0, 852044, 16, 0, 852045, 16, 0, 852046, 20, 0, 852047, 5, 0, 852048, 8, 0, 852049, 8, 0, 852050, 8, 0, 852051, 8, 0, 852052, 50, 0, 852053, 57, 0, 852056, 37, 0, 852057, 38, 0, 852062, 30, 0, 852063, 39, 0, 852064, 40, 0, 852065, 5, 0, 852066, 8, 0, 852067, 8, 0, 852068, 8, 0, 852069, 8, 0, 852070, 8, 0, 852071, 8, 0, 852072, 8, 0, 852073, 8, 0, 852074, 8, 0, 852075, 8, 0, 852076, 8, 0, 852077, 8, 0, 852078, 8, 0, 852079, 3, 0, 852080, 30, 0, 852082, 31, 0, 852090, 32, 0, 852092, 54, 0, 852093, 2, 0, 852099, 27, 0, 852105, 27, 0, 852110, 5, 0, 852111, 8, 0, 852112, 8, 0, 852113, 8, 0, 852114, 8, 0, 852115, 8, 0, 852116, 8, 0, 852117, 8, 0, 852118, 8, 0, 852119, 8, 0, 852120, 8, 0, 852121, 8, 0, 852122, 8, 0, 852123, 8, 0, 852124, 8, 0, 917504, 13, 0, 917505, 13, 0, 917506, 13, 0, 917507, 13, 0, 917508, 13, 0, 917509, 13, 0, 917510, 13, 0, 917511, 13, 0, 917512, 13, 0, 917513, 13, 0, 917514, 13, 0, 917515, 13, 0, 917516, 13, 0, 917517, 13, 0, 917518, 13, 0, 917519, 13, 0, 917520, 13, 0, 917521, 13, 0, 917522, 13, 0, 917523, 13, 0, 917524, 13, 0, 917525, 13, 0, 917526, 13, 0, 917527, 13, 0, 917528, 5, 0, 917529, 8, 0, 917530, 8, 0, 917531, 8, 0, 917532, 8, 0, 917533, 8, 0, 917534, 8, 0, 917535, 8, 0, 917536, 8, 0, 917537, 8, 0, 917538, 8, 0, 917539, 8, 0, 917540, 8, 0, 917541, 8, 0, 917542, 8, 0, 917543, 8, 0, 917544, 8, 0, 917545, 8, 0, 917546, 8, 0, 917547, 8, 0, 917548, 8, 0, 917549, 8, 0, 917550, 8, 0, 917551, 8, 0, 917552, 8, 0, 917553, 8, 0, 917554, 8, 0, 917555, 8, 0, 917556, 8, 0, 917557, 8, 0, 917558, 3, 0, 917559, 13, 0, 917560, 13, 0, 917561, 13, 0, 917562, 13, 0, 917563, 13, 0, 917564, 13, 0, 917565, 13, 0, 917566, 13, 0, 917567, 13, 0, 917568, 13, 0, 917569, 13, 0, 917570, 13, 0, 917571, 13, 0, 917572, 13, 0, 917573, 13, 0, 917574, 13, 0, 917575, 13, 0, 917576, 13, 0, 917577, 13, 0, 917578, 13, 0, 917579, 13, 0, 917580, 13, 0, 917581, 13, 0, 917582, 13, 0, 917583, 5, 0, 917584, 8, 0, 917585, 8, 0, 917586, 8, 0, 917587, 8, 0, 917588, 53, 0, 917589, 42, 0, 917590, 42, 0, 917591, 55, 0, 917592, 39, 0, 917593, 40, 0, 917594, 31, 0, 917595, 32, 0, 917597, 54, 0, 917598, 42, 0, 917599, 1, 0, 917600, 1, 0, 917601, 1, 0, 917602, 52, 0, 917603, 8, 0, 917604, 8, 0, 917605, 8, 0, 917606, 8, 0, 917607, 8, 0, 917608, 8, 0, 917609, 8, 0, 917610, 8, 0, 917611, 8, 0, 917612, 8, 0, 917613, 8, 0, 917614, 8, 0, 917615, 3, 0, 917616, 0, 0, 917617, 1, 0, 917618, 1, 0, 917619, 1, 0, 917620, 1, 0, 917621, 1, 0, 917622, 1, 0, 917623, 1, 0, 917624, 1, 0, 917625, 1, 0, 917626, 1, 0, 917627, 1, 0, 917628, 1, 0, 917629, 44, 0, 917630, 22, 0, 917631, 22, 0, 917632, 22, 0, 917633, 22, 0, 917634, 22, 0, 917635, 18, 0, 917636, 22, 0, 917637, 22, 0, 917638, 22, 0, 917639, 22, 0, 917640, 22, 0, 917641, 18, 0, 917642, 22, 0, 917643, 22, 0, 917644, 22, 0, 917645, 22, 0, 917646, 25, 0, 917647, 16, 0, 917648, 16, 0, 917649, 16, 0, 917650, 16, 0, 917651, 16, 0, 917652, 16, 0, 917653, 16, 0, 917654, 16, 0, 917655, 16, 0, 917656, 16, 0, 917657, 16, 0, 917658, 16, 0, 917659, 16, 0, 917660, 16, 0, 983040, 13, 0, 983041, 13, 0, 983042, 13, 0, 983043, 13, 0, 983044, 13, 0, 983045, 13, 0, 983046, 13, 0, 983047, 13, 0, 983048, 13, 0, 983049, 13, 0, 983050, 13, 0, 983051, 13, 0, 983052, 13, 0, 983053, 13, 0, 983054, 13, 0, 983055, 13, 0, 983056, 13, 0, 983057, 13, 0, 983058, 13, 0, 983059, 13, 0, 983060, 13, 0, 983061, 13, 0, 983062, 13, 0, 983063, 13, 0, 983064, 5, 0, 983065, 8, 0, 983066, 8, 0, 983067, 8, 0, 983068, 8, 0, 983069, 8, 0, 983070, 8, 0, 983071, 8, 0, 983072, 8, 0, 983073, 8, 0, 983074, 8, 0, 983075, 8, 0, 983076, 8, 0, 983077, 8, 0, 983078, 8, 0, 983079, 8, 0, 983080, 8, 0, 983081, 8, 0, 983082, 8, 0, 983083, 8, 0, 983084, 8, 0, 983085, 8, 0, 983086, 8, 0, 983087, 8, 0, 983088, 8, 0, 983089, 8, 0, 983090, 8, 0, 983091, 8, 0, 983092, 8, 0, 983093, 8, 0, 983094, 3, 0, 983095, 13, 0, 983096, 13, 0, 983097, 13, 0, 983098, 13, 0, 983099, 13, 0, 983100, 13, 0, 983101, 13, 0, 983102, 13, 0, 983103, 13, 0, 983104, 13, 0, 983105, 13, 0, 983106, 13, 0, 983107, 13, 0, 983108, 13, 0, 983109, 13, 0, 983110, 13, 0, 983111, 13, 0, 983112, 13, 0, 983113, 13, 0, 983114, 13, 0, 983115, 13, 0, 983116, 13, 0, 983117, 13, 0, 983118, 13, 0, 983119, 5, 0, 983120, 8, 0, 983121, 8, 0, 983122, 8, 0, 983123, 53, 0, 983124, 42, 0, 983125, 42, 0, 983126, 42, 0, 983127, 42, 0, 983128, 42, 0, 983129, 42, 0, 983130, 42, 0, 983131, 42, 0, 983132, 42, 0, 983133, 42, 0, 983134, 52, 0, 983135, 8, 0, 983136, 8, 0, 983137, 8, 0, 983138, 8, 0, 983139, 8, 0, 983140, 8, 0, 983141, 8, 0, 983142, 8, 0, 983143, 8, 0, 983144, 8, 0, 983145, 8, 0, 983146, 8, 0, 983147, 8, 0, 983148, 8, 0, 983149, 8, 0, 983150, 8, 0, 983151, 3, 0, 983152, 25, 0, 983153, 16, 0, 983154, 16, 0, 983155, 16, 0, 983156, 16, 0, 983157, 16, 0, 983158, 16, 0, 983159, 16, 0, 983160, 16, 0, 983161, 16, 0, 983162, 16, 0, 983163, 16, 0, 983164, 16, 0, 983165, 20, 0, 983166, 13, 0, 983167, 13, 0, 983168, 13, 0, 983169, 13, 0, 983170, 13, 0, 983171, 13, 0, 983172, 13, 0, 983173, 13, 0, 983174, 13, 0, 983175, 13, 0, 983176, 13, 0, 983177, 13, 0, 983178, 13, 0, 983179, 13, 0, 983180, 13, 0, 983181, 13, 0, 983182, 13, 0, 983183, 13, 0, 983184, 13, 0, 983185, 13, 0, 983186, 13, 0, 983187, 13, 0, 983188, 13, 0, 983189, 13, 0, 983190, 13, 0, 983191, 13, 0, 983192, 13, 0, 983193, 13, 0, 983194, 13, 0, 983195, 13, 0, 983196, 13, 0 )

[node name="BackgroundAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_offset = Vector2( 1, 0 )
scroll_base_offset = Vector2( 1, 0 )
scroll_base_scale = Vector2( 0.1, 1 )

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1152, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer1"]
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 0, -46 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1152, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
centered = false
offset = Vector2( 0, -46 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.2, 1 )
motion_offset = Vector2( 60, 0 )
motion_mirroring = Vector2( 1152, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( 0, -46 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.4, 1 )
motion_offset = Vector2( 100, 0 )
motion_mirroring = Vector2( 1152, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( 0, -46 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 2, 1 )
motion_offset = Vector2( 200, 0 )
motion_mirroring = Vector2( 1152, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( 0, -46 )

[node name="FallArea1" type="Area2D" parent="."]
position = Vector2( 2104, 552 )
scale = Vector2( 2, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="FallHitBox1" type="CollisionShape2D" parent="FallArea1"]
shape = SubResource( 1 )

[node name="FallArea2" type="Area2D" parent="."]
position = Vector2( 4344, 552 )
scale = Vector2( 2, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="FallHitBox2" type="CollisionShape2D" parent="FallArea2"]
shape = SubResource( 1 )

[node name="GrineerLancer" parent="." instance=ExtResource( 11 )]
position = Vector2( 592, 272 )
collision_mask = 2147483649

[node name="GrineerLancer2" parent="." instance=ExtResource( 11 )]
position = Vector2( 1120, 16 )
collision_mask = 2147483649

[node name="GrineerLancer3" parent="." instance=ExtResource( 11 )]
position = Vector2( 1464, 112 )
collision_mask = 2147483649

[node name="GrineerLancer4" parent="." instance=ExtResource( 11 )]
position = Vector2( 1576, 112 )
collision_mask = 2147483649

[node name="GrineerLancer5" parent="." instance=ExtResource( 11 )]
position = Vector2( 1680, 240 )
collision_mask = 2147483649

[node name="GrineerLancer6" parent="." instance=ExtResource( 11 )]
position = Vector2( 1872, 336 )
collision_mask = 2147483649

[node name="GrineerLancer7" parent="." instance=ExtResource( 11 )]
position = Vector2( 2408, 272 )
collision_mask = 2147483649

[node name="GrineerLancer8" parent="." instance=ExtResource( 11 )]
position = Vector2( 2536, 176 )
collision_mask = 2147483649

[node name="GrineerLancer9" parent="." instance=ExtResource( 11 )]
position = Vector2( 3088, 432 )
collision_mask = 2147483649

[node name="GrineerLancer10" parent="." instance=ExtResource( 11 )]
position = Vector2( 2960, 464 )
collision_mask = 2147483649

[node name="GrineerLancer11" parent="." instance=ExtResource( 11 )]
position = Vector2( 2872, 464 )
collision_mask = 2147483649

[node name="GrineerLancer12" parent="." instance=ExtResource( 11 )]
position = Vector2( 2912, 464 )
collision_mask = 2147483649

[node name="GrineerLancer13" parent="." instance=ExtResource( 11 )]
position = Vector2( 3296, 48 )
collision_mask = 2147483649

[node name="GrineerLancer14" parent="." instance=ExtResource( 11 )]
position = Vector2( 3552, 240 )
collision_mask = 2147483649

[node name="GrineerLancer15" parent="." instance=ExtResource( 11 )]
position = Vector2( 3600, 432 )
collision_mask = 2147483649

[node name="GrineerLancer16" parent="." instance=ExtResource( 11 )]
position = Vector2( 3752, 432 )
collision_mask = 2147483649

[node name="GrineerLancer17" parent="." instance=ExtResource( 11 )]
position = Vector2( 3896, 432 )
collision_mask = 2147483649

[node name="GrineerLancer18" parent="." instance=ExtResource( 11 )]
position = Vector2( 4624, 304 )
collision_mask = 2147483649

[node name="GrineerLancer19" parent="." instance=ExtResource( 11 )]
position = Vector2( 4760, 112 )
collision_mask = 2147483649
